<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="#99000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black_3333"
                android:textSize="18sp"
                android:text="@string/copy_data_to"/>

            <LinearLayout
                android:id="@+id/btn_copy_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_5555"
                    android:textSize="16sp"
                    android:text="@string/copy_type_1"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/grey_9999"
                    android:text="@string/copy_type_1_desc"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_copy_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_5555"
                    android:textSize="16sp"
                    android:text="@string/copy_type_2"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/grey_9999"
                    android:text="@string/copy_type_2_desc"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_copy_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eee"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_5555"
                    android:textSize="16sp"
                    android:text="@string/copy_type_3"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textColor="@color/grey_9999"
                    android:text="@string/copy_type_3_desc"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ll_main"
            android:translationX="15dp"
            android:adjustViewBounds="true"
            android:alpha="0.8"
            android:padding="2dp"
            app:srcCompat="@drawable/ic_close_circular" />

    </RelativeLayout>

</RelativeLayout>